--- a/src/components/Auth/styles.scss
+++ b/src/components/Auth/styles.scss
@@ -17,7 +17,7 @@
   width: 100%;
   padding: 25px;
   border-radius: 3px;
-  border: 1px solid $primary-lighter;
+  box-shadow: 0 0 5px $primary-lighter;
 }
 .auth-form__heading {
   font-size: 24px;
