changed color palette

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,16 +1,16 @@
 // primary color
-$primary: #572A72;
-$primary-light: #754B8E;
-$primary-lighter: #9775AA;
-$primary-dark: #3C1255;
-$primary-darker: #250339;
+$primary: #194EA5;
+$primary-light: #3F6CB4;
+$primary-lighter: #6689C3;
+$primary-dark: #15418A;
+$primary-darker: #11346E;
 
 // secondary color
-$secondary: #93A537;
-$secondary-light: #BDCE67;
-$secondary-lighter: #EAF7A5;
-$secondary-dark: #6B7B15;
-$secondary-darker: #455200;
+$secondary: #91CC1D;
+$secondary-light: #A6E133;
+$secondary-lighter: #AEE445;
+$secondary-dark: #84B91B;
+$secondary-darker: #79AA18;
 
 // info color
 $info: #c0bdc0;
