--- a/src/components/Memory/styles.scss
+++ b/src/components/Memory/styles.scss
@@ -30,7 +30,7 @@
   font-size: 14px;
   font-weight: 400;
   line-break: anywhere;
-  color: $primary-light;
+  color: $primary-dark;
 }
 
 .home-memory__footer {
