added loader and error handling

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,6 +1,9 @@
 @import "../../assets/scss/variables";
 
 .header {
+  position: fixed;
+  top: 0;
+  width: 100%;
   padding: 15px 0;
   background-color: $secondary-dark;
 }
