--- a/src/pages/profile/Fields/Field/styles.scss
+++ b/src/pages/profile/Fields/Field/styles.scss
@@ -86,6 +86,11 @@
     opacity: 1;
 
     &:hover {
+      opacity: 0.7;
+    }
+
+    &:active {
+      opacity: 1;
       color: darkred;
     }
   }
