--- a/src/components/common/PrimaryButton/styles.scss
+++ b/src/components/common/PrimaryButton/styles.scss
@@ -9,6 +9,10 @@
   border-radius: 6px;
   transition: background-color .2s ease-in-out;
 
+  &:disabled {
+    background-color: $primary-lighter !important;
+  }
+
   &:hover {
     background-color: $primary-light;
   }
