--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -48,6 +48,10 @@
   font-size: 14px;
   transition: background-color .2s ease-in-out;
 
+  &:disabled {
+    background-color: $primary-lighter !important;
+  }
+
   &:hover {
     background-color: $primary-light;
   }
