--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -25,7 +25,7 @@
 
   &:focus {
     border-color: $primary;
-    box-shadow: 0 0 3px $primary-light;
+    box-shadow: 0 0 3px $primary;
   }
   &:focus + label {
     color: $primary;
@@ -41,6 +41,7 @@
 
 @mixin field() {
   width: 100%;
+  line-height: 16px;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
