--- a/src/components/Memories/Memory/styles.scss
+++ b/src/components/Memories/Memory/styles.scss
@@ -2,7 +2,9 @@
 
 .home-memory {
   position: relative;
-  width: 30%;
+  display: flex;
+  flex-direction: column;
+  width: 32%;
   border: 0.5px solid $info;
   border-radius: 7px;
   margin-top: 15px;
@@ -16,6 +18,26 @@
       opacity: 1;
       transform: scale(1);
       user-select: auto;
+    }
+  }
+  
+  @media only screen and (max-width: 1110px) {
+    width: 48%;
+
+    &:nth-child(3n + 2) {
+      margin: 15px 0 0;
+    }
+
+    &:nth-child(2n + 1) {
+      margin-right: 10px;
+    }
+  }
+
+  @media only screen and (max-width: 772px) {
+    width: 100%;
+
+    &:nth-child(2n + 1) {
+      margin-right: 0;
     }
   }
 }
@@ -42,26 +64,56 @@
 }
 
 .home-memory__header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
   border-bottom: 1px solid $info;
   padding: 8px 5px;
 }
 .home-memory__header_title {
   color: $primary;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
-  line-break: anywhere;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .home-memory__main {
   width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
   padding: 10px 5px;
+}
+.home-memory__image_wrapper {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.home-memory__image {
+  width: 100%;
+  height: 100%;
+  max-width: 300px;
+  object-fit: cover;
 }
 .home-memory__description {
   font-size: 14px;
+  line-height: 16px;
   font-weight: 400;
   line-break: anywhere;
   color: $primary-dark;
+  white-space: pre-line;
+
+  &.image {
+    margin-top: 10px;
+  }
 }
 
 .home-memory__footer {
