--- a/src/pages/profile/Fields/Field/styles.scss
+++ b/src/pages/profile/Fields/Field/styles.scss
@@ -1,14 +1,24 @@
 @import "../../../../assets/scss/variables";
-@import "../../../../assets/scss/mixins";
 
 .profile-edit__field {
-  @include field();
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+
+  &:not(:first-child) {
+    margin-top: 20px;
+  }
 
   &:hover {
     .profile-edit__field_name_button {
       opacity: 1;
     }
   }
+}
+.profile-edit__field_label {
+  color: $primary !important;
 }
 .profile-edit__field_name_wrapper {
   width: 100%;
@@ -20,9 +30,11 @@
 .profile-edit__field_name {
   font-size: 16px;
   line-height: 25px;
+  min-height: 25px;
   padding-left: 5px;
   width: 80%;
   line-break: anywhere;
+  cursor: pointer;
 }
 .profile-edit__field_name_form {
   width: 80%;
@@ -107,11 +119,4 @@
       color: darkred;
     }
   }
-}
-.profile-edit__field_input {
-  @include input();
-}
-.profile-edit__field_label {
-  color: $primary !important;
-  @include label();
 }
