--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -24,6 +24,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
+  margin-top: 0;
 }
 .home-form__image {
   min-height: 18px;
