--- a/src/index.scss
+++ b/src/index.scss
@@ -56,6 +56,7 @@ button {
   &:disabled {
     cursor: default;
     user-select: none;
+    pointer-events: none;
   }
 }
 
@@ -66,4 +67,5 @@ button {
 .container {
   width: 90%;
   margin: 0 auto;
+  transition: width .2s ease-in-out;
 }
